[project]
name = "random-things"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "BrandenXia", email = "xxtbranden@outlook.com" }
]
dependencies = [
    "rich-argparse>=1.5.2",
    "pandas>=2.2.2",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
]

[tool.rye.scripts]
format = "black src"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/random_things"]

[tool.black]
line-length = 88
target-version = ["py312"]
